--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8" />
 
+    <link rel="preconnect" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Parkè | Your One Stop Car Parking Solution"
+      content="Parkè | Your One Stop Vehicle Parking Solution"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
